tests/suite/errors/e42_byte_literal_out_of_range.rs
// err: byte literal value must be in the range 0..=255

fn main() {
    let _x: u32 = b'\u{100}';
}
